# chip8

./: CMakeLists.txt  README.md  chip8.c  chip8.h  display.c  emu.c  emulator  main.c
headers/: chip8.h  display.h  struct.h
